fixed text alignment

--- a/primeclock.css
+++ b/primeclock.css
@@ -5,6 +5,7 @@ body{
 	color: white;
 	text-shadow: 0px 0px 5px black, 0px 0px 5px black;
 	font-size: large;
+	text-align: left;
 }
 a{
 	color: skyblue;
